# DjangoProject

./: README.MD  pyproject.toml
djangoProject/app/: settings.py  urls.py
djangoProject/carts/: admin.py  models.py  urls.py  views.py
djangoProject/carts/migrations/: 0001_initial.py
djangoProject/carts/templates/carts/includes/: included_cart.html
djangoProject/carts/templatetags/: carts_tags.py
djangoProject/fixtures/goods/: products.json
djangoProject/goods/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
djangoProject/goods/migrations/: 0001_initial.py
djangoProject/goods/templates/goods/: catalog.html  product.html
djangoProject/goods/templatetags/: goods_tags.py
djangoProject/main/: urls.py  views.py
djangoProject/main/templates/main/: about.html  base.html  index.html
djangoProject/orders/: admin.py  forms.py  models.py  urls.py  views.py
djangoProject/orders/migrations/: 0001_initial.py
djangoProject/orders/templates/orders/: create_order.html
djangoProject/templates/: base.html
djangoProject/templates/includes/: cart_button.html  notifications.html
djangoProject/users/: admin.py  forms.py  models.py  urls.py  views.py
djangoProject/users/migrations/: 0001_initial.py  0002_user_phone_number.py
djangoProject/users/templates/users/: login.html  password_change.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  registration.html  users_cart.html
templates/goods/: catalog.html
(+4 files in other folders)
