[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["kbuhantsev <k.buhantsev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.9"
pillow = "^10.2.0"
ipython = "^8.19.0"
django-debug-toolbar = "^4.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.17"}
djlint = "^1.34.1"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
